syntax = "proto3";

option csharp_namespace = "GigaStore";

service Giga {
  rpc Read (ReadRequest) returns (ReadReply);
  rpc Write (WriteRequest) returns (WriteReply);

  rpc ReadAdvanced (ReadRequest) returns (ReadReply);
  rpc WriteAdvanced (WriteRequest) returns (WriteReply);
  rpc CheckStatus (CheckRequest) returns (CheckReply);
}

message ReadRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
	int32 server_id = 3;
}

message ReadReply {
	string value = 1;
}

message WriteRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
	string value = 3;
}

message WriteReply {
	
}

message CheckRequest {
	int32 server_id = 1;
}

message CheckReply {

}